@@ -1,7 +1,7 @@
 #! /bin/sh
 aclocal \
 && autoheader \
-&& automake --gnu --add-missing \
+&& automake --gnu --add-missing --copy \
 && autoconf \
-&& libtoolize --force 
+&& libtoolize --force --copy
 
