@@ -1,7 +1,7 @@
 /*
- * setrom.c - A little utility to test the update features of librom1394
+ * mkrfc2734.c - A utility to set the configROM of a Linux host running eth1394
  *
- * Copyright 2002 Dan Dennedy <dan@dennedy.org>
+ * Copyright 2003 Dan Dennedy <dan@dennedy.org>
  *
  * This library is licensed under the GNU Lesser General Public License (LGPL),
  * version 2.1 or later. See the file COPYING.LIB in the distribution for
@@ -35,7 +35,7 @@ int main(int argc, char **argv)
 	size_t rom_size;
 	unsigned char rom_version;
 	rom1394_directory dir;
-	char *leaf;
+	char *(leaf[2]);
 	
 	handle = raw1394_new_handle();
 	
@@ -58,37 +58,20 @@ int main(int argc, char **argv)
 	retval=raw1394_get_config_rom(handle, rom, 0x100, &rom_size, &rom_version);
 	rom_size = rom1394_get_size(rom);
 	printf("get_config_rom returned %d, romsize %d, rom_version %d:",retval,rom_size,rom_version);
-	for (i = 0; i < rom_size; i++)
-	{
-		if (i % 4 == 0) printf("\n0x%04x:", CSR_CONFIG_ROM+i*4);
-		printf(" %08x", ntohl(rom[i]));
-	}
-	printf("\n");
 	
 	/* get the local directory */
 	rom1394_get_directory( handle, raw1394_get_local_id(handle) & 0x3f, &dir);
 	
-	/* change the vendor description for kicks */
-	i = strlen(dir.textual_leafs[0]);
-	strncpy(dir.textual_leafs[0], "Kino Rocks!                               ", i);
-	retval = rom1394_set_directory(rom, &dir);
-	printf("rom1394_set_directory returned %d, romsize %d:",retval,rom_size);
-	for (i = 0; i < rom_size; i++)
-	{
-		if (i % 4 == 0) printf("\n0x%04x:", CSR_CONFIG_ROM+i*4);
-		printf(" %08x", ntohl(rom[i]));
-	}
-	printf("\n");
-	
 	/* free the allocated mem for the textual leaves */
 	rom1394_free_directory( &dir);
 	
-	/* add an AV/C unit directory */
-	dir.unit_spec_id    = 0x0000a02d;
-	dir.unit_sw_version = 0x00010001;
-	leaf = "avc_vcr";
-	dir.nr_textual_leafs = 1;
-	dir.textual_leafs = &leaf;
+	/* add an RFC 2734 unit directory */
+	dir.unit_spec_id    = 0x0000005e;
+	dir.unit_sw_version = 0x00000001;
+	leaf[0] = "IANA";
+    leaf[1] = "IPv4";
+	dir.nr_textual_leafs = 2;
+	dir.textual_leafs = leaf;
 	
 	/* manipulate the rom */
 	retval = rom1394_add_unit( rom, &dir);
@@ -97,28 +80,14 @@ int main(int argc, char **argv)
 	rom_size = rom1394_get_size(rom);
 	
 	printf("rom1394_add_unit_directory returned %d, romsize %d:",retval,rom_size);
-	for (i = 0; i < rom_size; i++)
-	{
-		if (i % 4 == 0) printf("\n0x%04x:", CSR_CONFIG_ROM+i*4);
-		printf(" %08x", ntohl(rom[i]));
-	}
-	printf("\n");
 	
 	/* convert computed rom size from quadlets to bytes before update */
 	rom_size *= sizeof(quadlet_t);
 	retval = raw1394_update_config_rom(handle, rom, rom_size, rom_version);
 	printf("update_config_rom returned %d\n",retval);
-	
-	retval=raw1394_get_config_rom(handle, rom, 0x100, &rom_size, &rom_version);
-	printf("get_config_rom returned %d, romsize %d, rom_version %d:",retval,rom_size,rom_version);
-	for (i = 0; i < rom_size; i++)
-	{
-		if (i % 4 == 0) printf("\n0x%04x:", CSR_CONFIG_ROM+i*4);
-		printf(" %08x", ntohl(rom[i]));
-	}
-	printf("\n");
-	
 	printf("You need to reload your ieee1394 modules to reset the rom.\n");
+    
+    raw1394_reset_bus(handle);
 	
 	exit(EXIT_SUCCESS);
 }
